# Delaunay

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
CMake/: Config.cmake.in
Source/: BezierCurve.cc  CMakeLists.txt  DTBezierCurve.cc  DTBezierCurve.hh  DTCVCanvas.cc  DTCVCanvas.hh  DTCanvas.hh  DTColor.cc  DTColor.hh  DTDelaunayMesh.cc  DTDelaunayMesh.hh  DTFunction.hh  DTLine.hh  DTLineSegment.hh  DTMesh.cc  DTMesh.hh  DTParametricCurve.hh  DTPlanarStraightLineGraph.hh  DTPoint.hh  DTPolygon.cc  DTPolygon.hh  DTQuadraticFunction.cc  DTQuadraticFunction.hh  DTTriangle.cc  DTTriangle.hh  DTVector.hh  Function.cc  Mesh.cc  Polygon.cc  Random.cc  Random.hh  Triangle.cc
Source/Discretization/: AddInteriorPoint.cc  AddInteriorPoint.hh  CMakeLists.txt  CheckForEncroachment.cc  CheckForEncroachment.hh  ConstrainedDelaunayMesh.cc  ConstrainedDelaunayMesh.hh  CutEdge.cc  CutEdge.hh  DelaunayDiscretizer.cc  DelaunayDiscretizer.hh  DelaunayMesh.cc  DelaunayMesh.hh  DiscretizePolygon.cc  DiscretizePolygon.hh  EdgeInserter.cc  EdgeInserter.hh  EnforceMinimumAngle.cc  EnforceMinimumAngle.hh  ExcisePolygon.cc  ExcisePolygon.hh  ExtendMesh.cc  ExtendMesh.hh  InsertEdge.cc  InsertEdge.hh  InsertLineSegment.cc  InsertLineSegment.hh  LegalizeEdges.cc  LegalizeEdges.hh  Mesh.cc  Mesh.hh  PolygonDiscretizer.cc  PolygonDiscretizer.hh  PolygonExciser.cc  PolygonExciser.hh  RemoveBoundedRegion.cc  RemoveBoundedRegion.hh  RuppertsAlgorithm.cc  RuppertsAlgorithm.hh  SplitEdge.cc  (+7 more)
Source/Mesh/: CMakeLists.txt  Edge.hh  EdgeSet.hh  Mesh.cc  Mesh.hh  Mesher.cc  Mesher.hh  Polygon.cc  Polygon.cc.REMOVE  Polygon.hh  Polygon.hh.REMOVE  Triangle.cc  Triangle.cc.REMOVE  Triangle.hh  TriangleSet.hh  Vertex.hh
Source/Misc/: CMakeLists.txt  Function.hh  QuadraticFunction.cc  QuadraticFunction.hh  Random.cc  Random.hh
Source/Reader/: nanosvg.h
Source/Shape/: BezierCurve.cc  BezierCurve.hh  CMakeLists.txt  Circle.hh  CircleUtilities.cc  CircleUtilities.hh  LineSegment.cc  LineSegment.hh  LineSegmentUtilities.cc  LineSegmentUtilities.hh  ParametricCurve.hh  Point.hh  PointUtilities.cc  PointUtilities.hh  PointVector.hh  Polygon.cc  Polygon.hh  PolygonUtilities.cc  PolygonUtilities.hh  Triangle.cc  Triangle.hh  TriangleUtilities.cc  TriangleUtilities.hh
Source/Shape/Tests/: CMakeLists.txt  TestFunction.hh  UnitTestLineSegment.cc  UnitTestLineSegmentUtilities.cc  UnitTestPoint.cc  UnitTestPointUtilities.cc  UnitTestTriangle.cc  UnitTestTriangleUtilities.cc
Source/Test/: AddEdge.cc  BezierCurve.cc  CMakeLists.txt  ChesapeakeBay.cc  EnforceMinimumAngle.cc  ExcisePolygon.cc  Function.cc  Mesh.cc  MeshedBox.cc  MeshedPolygon.cc  Polygon.cc  PolygonGenerator.cc  RandomRefinedPolygon.cc  ReadSVG.cc  SeditiousEdge.cc  SplitEdge.cc  Triangle.cc  vtkPolyDataToPolygon.cc
Source/Validation/: CMakeLists.txt  IsValidPolygon.cc  IsValidPolygon.hh
Source/Visualization/: CMakeLists.txt  CVCanvas.cc  CVCanvas.hh  Canvas.cc  Canvas.hh  Color.cc  Color.hh  VTKCanvas.cc  VTKCanvas.hh
data/: chesapeake-0.001-100.vtp
install/lib/: libDelaunayDiscretization.dylib  libDelaunayMisc.dylib  libDelaunayShape.dylib  libDelaunayVisualization.dylib
